Fixed the stupid post-content layout-breaking overflow in some browsers and a CSS error that caused the original fix to only work in certain conditions.
svn path=/trunk/boinc/; revision=12620

--- a/html/user/white.css
+++ b/html/user/white.css
@@ -177,9 +177,11 @@ blockquote {
     font-style: oblique
 } 
 
-#thread table {
+#thread {
     width: 100%;
     table-layout: fixed;
+    overflow:overflow;
+    word-wrap:break-word;           
 }
 
 .sigdelim {
